force-app/main/default/objects/Ag_Account__c/Ag_Account__c.object-meta.xml
<CustomObject>
    <label>Ag Account</label>
    <nameField>
        <displayFormat>AGA-{000}</displayFormat>
        <label>Ag Account Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ag Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>