force-app/main/default/objects/Ag_Account__c/fields/Ag_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Ag_Account_Name__c</fullName>
    <label>Ag Account Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>