force-app/main/default/objects/Ag_Account__c/fields/Opp_Max_Amount__c.field-meta.xml
<CustomField>
    <fullName>Opp_Max_Amount__c</fullName>
    <label>Opp Max Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>