force-app/main/default/objects/Ag_Account__c/fields/StandardAccount__c.field-meta.xml
<CustomField>
    <fullName>StandardAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>StandardAccount</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Ag Accounts</relationshipLabel>
    <relationshipName>Ag_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>