force-app/main/default/objects/Ag_Account__c/fields/Total_Opps_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Opps_Amount__c</fullName>
    <label>Total Opps Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>